WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
308794
[AppKit Gestures] Double clicking to select text in PDFs does not work
https://bugs.webkit.org/show_bug.cgi?id=308794
Summary
[AppKit Gestures] Double clicking to select text in PDFs does not work
Richard Robinson
Reported
2026-02-26 20:01:15 PST
.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-02-26 20:01:22 PST
<
rdar://problem/171325358
>
Richard Robinson
Comment 2
2026-02-26 20:05:23 PST
Pull request:
https://github.com/WebKit/WebKit/pull/59555
EWS
Comment 3
2026-02-27 12:02:18 PST
Committed
308359@main
(59159d1ffb42): <
https://commits.webkit.org/308359@main
> Reviewed commits have been landed. Closing PR #59555 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug