[AppKit Gestures] Double clicking to select text in PDFs does not work https://bugs.webkit.org/show_bug.cgi?id=308794 rdar://171325358

Reviewed by Abrar Rahman Protyasha.

Fix by removing some platform guards to let text selection in PDFs to work.

One logic change is made, in `selectionCaretPointInPage`. This is because on macOS, a single line
can have multiple rects (one for each word), unlike iOS. Fix this by removing the existing debug
assertion and instead letting the rects coalesce by uniting them, and always just use the first transform.

* Source/WebKit/WebProcess/Plugins/PDF/PDFPluginBase.h:
(WebKit::PDFPluginBase::cursorContext const):
* Source/WebKit/WebProcess/Plugins/PDF/PDFPluginBase.mm:
* Source/WebKit/WebProcess/Plugins/PDF/UnifiedPDF/UnifiedPDFPlugin.h:
* Source/WebKit/WebProcess/Plugins/PDF/UnifiedPDF/UnifiedPDFPlugin.mm:
(WebKit::UnifiedPDFPlugin::platformPopulateEditorStateIfNeeded const):
(WebKit::UnifiedPDFPlugin::selectionCaretPointInPage const):
(WebKit::UnifiedPDFPlugin::clearSelection):
* Source/WebKit/WebProcess/Plugins/PluginView.cpp:
* Source/WebKit/WebProcess/Plugins/PluginView.h:
* Source/WebKit/WebProcess/WebPage/Cocoa/WebPageCocoa.mm:
(WebKit::WebPage::setSelectionRange):
(WebKit::WebPage::updateSelectionWithExtentPointAndBoundary):

Canonical link: https://commits.webkit.org/308359@main