Source/WebKit/WebProcess/Plugins/PDF/UnifiedPDF/UnifiedPDFPlugin.mm
@@ -4397,8 +4397,6 @@ std::optional<FloatRect> UnifiedPDFPlugin::highlightRectForTapAtPoint(FloatPoint
     return rect;
 }
 
-#if PLATFORM(IOS_FAMILY)
-
 #if HAVE(PDFDOCUMENT_SELECTION_WITH_GRANULARITY)
 
 static bool areVisuallyDistinct(FloatPoint a, FloatPoint b)
@@ -4530,80 +4528,6 @@ SelectionEndpoint UnifiedPDFPlugin::extendInitialSelection(FloatPoint pointInRoo
     return SelectionEndpoint::Start;
 }
 
-bool UnifiedPDFPlugin::platformPopulateEditorStateIfNeeded(EditorState& state) const
-{
-    RetainPtr selection = m_currentSelection;
-    if (!selection) {
-        state.visualData = EditorState::VisualData { };
-        state.postLayoutData = EditorState::PostLayoutData { };
-        state.postLayoutData->isStableStateUpdate = true;
-        return true;
-    }
-
-    Vector<FloatRect> selectionRects;
-#if HAVE(PDFSELECTION_ENUMERATE_RECTS_AND_TRANSFORMS)
-    for (PDFPage *page in [selection pages]) {
-        auto pageIndex = m_documentLayout.indexForPage(page);
-        [selection enumerateRectsAndTransformsForPage:page usingBlock:[&, protectedThis = Ref { *this }](CGRect rect, CGAffineTransform transform) {
-            auto transformedRectInPage = CGRectApplyAffineTransform(rect, transform);
-            auto rectInRootView = protectedThis->pageToRootView(FloatRect { transformedRectInPage }, pageIndex);
-            if (rectInRootView.isEmpty())
-                return;
-
-            selectionRects.append(WTF::move(rectInRootView));
-        }];
-    }
-#endif // HAVE(PDFSELECTION_ENUMERATE_RECTS_AND_TRANSFORMS)
-
-    auto selectionGeometries = selectionRects.map([](auto& rectInRootView) {
-        return SelectionGeometry {
-            rectInRootView,
-            SelectionRenderingBehavior::CoalesceBoundingRects,
-            TextDirection::LTR,
-            0, // minX
-            0, // maxX
-            0, // maxY
-            0, // lineNumber
-            false, // isLineBreak
-            false, // isFirstOnLine
-            false, // isLastOnLine
-            false, // containsStart
-            false, // containsEnd
-            true, // isHorizontal
-        };
-    });
-
-    if (selectionGeometries.size()) {
-        selectionGeometries.first().setContainsStart(true);
-        selectionGeometries.last().setContainsEnd(true);
-    }
-
-    state.isInPlugin = true;
-    state.selectionType = selectionGeometries.isEmpty() ? WebCore::SelectionType::Caret : WebCore::SelectionType::Range;
-
-    auto selectedString = String { [selection string] };
-    state.postLayoutData = EditorState::PostLayoutData { };
-    state.postLayoutData->isStableStateUpdate = true;
-    state.postLayoutData->selectedTextLength = selectedString.length();
-    state.postLayoutData->canCopy = !selectedString.isEmpty();
-    state.postLayoutData->wordAtSelection = WTF::move(selectedString);
-
-    state.visualData = EditorState::VisualData { };
-    state.visualData->selectionGeometries = WTF::move(selectionGeometries);
-
-    if (m_presentationController)
-        state.visualData->enclosingLayerID = protect(m_presentationController)->contentsLayerIdentifier();
-
-    if (m_scrollingNodeID) {
-        state.visualData->enclosingScrollingNodeID = *m_scrollingNodeID;
-        state.visualData->enclosingScrollOffset = scrollOffset();
-    }
-
-    return true;
-}
-
-#endif // PLATFORM(IOS_FAMILY)
-
 CursorContext UnifiedPDFPlugin::cursorContext(FloatPoint pointInRootView) const
 {
     CursorContext context;
@@ -4667,6 +4591,84 @@ DocumentEditingContext UnifiedPDFPlugin::documentEditingContext(DocumentEditingC
 
 #endif // ENABLE(TWO_PHASE_CLICKS)
 
+bool UnifiedPDFPlugin::platformPopulateEditorStateIfNeeded(EditorState& state) const
+{
+    RetainPtr selection = m_currentSelection;
+    if (!selection) {
+        state.visualData = EditorState::VisualData { };
+        state.postLayoutData = EditorState::PostLayoutData { };
+#if PLATFORM(IOS_FAMILY)
+        state.postLayoutData->isStableStateUpdate = true;
+#endif
+        return true;
+    }
+
+    Vector<FloatRect> selectionRects;
+#if HAVE(PDFSELECTION_ENUMERATE_RECTS_AND_TRANSFORMS)
+    for (PDFPage *page in [selection pages]) {
+        auto pageIndex = m_documentLayout.indexForPage(page);
+        [selection enumerateRectsAndTransformsForPage:page usingBlock:[&, protectedThis = Ref { *this }](CGRect rect, CGAffineTransform transform) {
+            auto transformedRectInPage = CGRectApplyAffineTransform(rect, transform);
+            auto rectInRootView = protectedThis->pageToRootView(FloatRect { transformedRectInPage }, pageIndex);
+            if (rectInRootView.isEmpty())
+                return;
+
+            selectionRects.append(WTF::move(rectInRootView));
+        }];
+    }
+#endif // HAVE(PDFSELECTION_ENUMERATE_RECTS_AND_TRANSFORMS)
+
+    auto selectionGeometries = selectionRects.map([](auto& rectInRootView) {
+        return SelectionGeometry {
+            rectInRootView,
+            SelectionRenderingBehavior::CoalesceBoundingRects,
+            TextDirection::LTR,
+            0, // minX
+            0, // maxX
+            0, // maxY
+            0, // lineNumber
+            false, // isLineBreak
+            false, // isFirstOnLine
+            false, // isLastOnLine
+            false, // containsStart
+            false, // containsEnd
+            true, // isHorizontal
+        };
+    });
+
+    if (selectionGeometries.size()) {
+        selectionGeometries.first().setContainsStart(true);
+        selectionGeometries.last().setContainsEnd(true);
+    }
+
+    state.isInPlugin = true;
+    state.selectionType = selectionGeometries.isEmpty() ? WebCore::SelectionType::Caret : WebCore::SelectionType::Range;
+
+    auto selectedString = String { [selection string] };
+    state.postLayoutData = EditorState::PostLayoutData { };
+#if PLATFORM(IOS_FAMILY)
+    state.postLayoutData->isStableStateUpdate = true;
+    state.postLayoutData->wordAtSelection = WTF::move(selectedString);
+#endif
+    state.postLayoutData->selectedTextLength = selectedString.length();
+    state.postLayoutData->canCopy = !selectedString.isEmpty();
+
+    state.visualData = EditorState::VisualData { };
+    state.visualData->selectionGeometries = WTF::move(selectionGeometries);
+
+#if PLATFORM(IOS_FAMILY)
+    if (m_presentationController)
+        state.visualData->enclosingLayerID = protect(m_presentationController)->contentsLayerIdentifier();
+
+    if (m_scrollingNodeID) {
+        state.visualData->enclosingScrollingNodeID = *m_scrollingNodeID;
+        state.visualData->enclosingScrollOffset = scrollOffset();
+    }
+#endif // PLATFORM(IOS_FAMILY)
+
+    return true;
+}
+
 #if HAVE(PDFDOCUMENT_SELECTION_WITH_GRANULARITY)
 
 PDFSelection *UnifiedPDFPlugin::selectionBetweenPoints(FloatPoint fromPoint, PDFPage *fromPage, FloatPoint toPoint, PDFPage *toPage) const
@@ -4708,25 +4710,22 @@ auto UnifiedPDFPlugin::selectionCaretPointInPage(PDFSelection *selection, Select
     RetainPtr selectedLine = isStart ? [selectionsByLine firstObject] : [selectionsByLine lastObject];
     FloatRect boundsInRootView;
 
-    AffineTransform cumulativeTransform = [page transformForBox:kPDFDisplayBoxMediaBox];
-    bool appliedLineTransform = false;
-    [selectedLine enumerateRectsAndTransformsForPage:page.get() usingBlock:[&, protectedThis = Ref { *this }](CGRect rect, CGAffineTransform transform) {
-        if (std::exchange(appliedLineTransform, true)) {
-            ASSERT_NOT_REACHED();
-            return;
-        }
+    std::optional<AffineTransform> rectTransform;
 
-        boundsInRootView = protectedThis->pageToRootView({ CGRectApplyAffineTransform(rect, transform) }, page.get());
-        cumulativeTransform *= transform;
+    [selectedLine enumerateRectsAndTransformsForPage:page.get() usingBlock:[&, protectedThis = Ref { *this }](CGRect rect, CGAffineTransform transform) {
+        auto rectInRootView = protectedThis->pageToRootView({ CGRectApplyAffineTransform(rect, transform) }, page.get());
+        boundsInRootView.unite(rectInRootView);
+
+        if (!rectTransform)
+            rectTransform = transform;
     }];
 
     if (boundsInRootView.isEmpty())
         return { nil, { } };
 
-    if (!appliedLineTransform)
-        return { nil, { } };
+    auto cumulativeTransform = AffineTransform { [page transformForBox:kPDFDisplayBoxMediaBox] } * *rectTransform;
 
-    auto rotationInRadians = atan2(cumulativeTransform.b(), cumulativeTransform.a());
+    auto rotationInRadians = std::atan2(cumulativeTransform.b(), cumulativeTransform.a());
     if (!std::isfinite(rotationInRadians))
         return { nil, { } };
 
@@ -4761,9 +4760,7 @@ auto UnifiedPDFPlugin::selectionCaretPointInPage(SelectionEndpoint endpoint) con
 
 void UnifiedPDFPlugin::clearSelection()
 {
-#if PLATFORM(IOS_FAMILY)
     resetInitialSelection();
-#endif
     setCurrentSelection({ });
 }
 
